[tool.poetry]
name = "que-vemos"
version = "0.1.0"
description = ""
authors = ["Alex Menor <alex4menor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
